//-- ./proto/refresh_tokens.proto

syntax = "proto3";

package ledger;

import "common.proto";

service RefreshTokens {
  rpc RevokeRefreshToken (RevokeRefreshTokenRequest) returns (RevokeTokenResponse);
  rpc RevokeUserRefreshToken (RevokeUserRefreshTokensRequest) returns (RevokeTokenResponse);
  rpc DeleteRefreshToken(DeleteUsersRefreshTokensRequest) returns (RevokeTokenResponse);
}

message RevokeRefreshTokenRequest {
  string id = 1;
}

message RevokeUserRefreshTokensRequest {
  string id = 1;
}

message DeleteUsersRefreshTokensRequest {
  string user_id = 1;
}

message RevokeTokenResponse {
  bool is_revoked = 1;
}
