//-- ./proto/users.proto

syntax = "proto3";

package ledger;

import "common.proto";

service Users {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc ReadUser (ReadUserRequest) returns (UserResponse);
  rpc IndexUsers (UserIndexRequest) returns (UserIndexResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (UserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  string role = 4;
  bool is_active = 5;
  bool is_verified = 6;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  bool is_active = 5;
  bool is_verified = 6;
  string created_on = 7;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  bool is_active = 5;
  bool is_verified = 6;
}

message ReadUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
  bool is_active = 4;
  bool is_verified = 5;
  string created_on = 6;
}

message UserIndexRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message UserRequest {
  string id = 1;
}

message UserIndexResponse {
  repeated UserResponse users = 1;
}

message DeleteUserResponse {
  bool is_deleted = 1;
}
